# dir-to-md

./: README.md  devnotes.md  main.py  pyproject.toml
src/dir_to_md/: __init__.py
tests/: test_dir_to_md.py
