[project]
name = "dir-to-md"
version = "0.1.0"
description = "Write a directory listing to a Markdown file."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
dir-to-md = "dir_to_md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
